--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-    <body>
-        This is body
-    </body>
+  <body>
+    <h1>This is header 1</h1>
+    <p>This is body</p>
+  </body>
 </html>
